# gait-main-JE---12052025

./: .gitignore  README.md  pyproject.toml  test.db
fastapi/: .env_sample  README.md  main.py
gait/: __init__.py  agency.py  agent.py  dialog.py  mao.py  observer.py  operator.py  utils.py
gait/fel/: fel_base.py  fel_flow.py  fel_llm0.py  fel_llm1.py  fel_llm2.py  fel_memory.py  fel_observer.py
gait/idris/: idris_base.py  idris_precomputed.py  idris_trainer.py
notebooks/: Agency.ipynb  Agent.ipynb  AgentWithDialog.ipynb  ChainOfDraft.ipynb  DSPy.ipynb  EnglishSpanish.ipynb  FunctionCalling.ipynb  LayerSelector1.ipynb  LayerSelector2.ipynb  MCP.ipynb  MultiAgentOrchastration.ipynb  ReAct.ipynb  Variations.ipynb  get_model_info.ipynb
notebooks/fel/: FELFlow.ipynb  FELMemory.ipynb  FindExistingLocations.ipynb
notebooks/flow/: AFlow.ipynb  Flow.ipynb  HIL.ipynb  MapReduce.ipynb  Workflow.ipynb
notebooks/idris/: langchain_augmentation_test.ipynb  test.db
notebooks/scratch/: CalcEmb.ipynb
tests/: test_query_with_idris.py
toolboxes/: GAITAdmin.pyt  GAITTools.atbx  IdrisGeospatialTools.pyt  PrepareExistingLocations.py  PrepareIdrisGeospatialData.py  QueryExistingLocations.py  QueryWithIdris.py
tutorial/: FunctionCalling.ipynb  Route1.ipynb  Route2.ipynb  Tutorial01.ipynb  Tutorial02.ipynb
